--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-accordion-with-header": "^0.1.2",
         "react-dom": "^16.12.0",
         "react-draggable": "^4.4.3",
+        "react-helmet": "^6.1.0",
         "react-hook-form": "^6.9.2",
         "react-i18next": "^11.7.3",
         "react-preloaders": "^3.0.3",
